--- a/Public/static/css/style.css
+++ b/Public/static/css/style.css
@@ -1,7 +1,6 @@
 @import "./grid.css"; @import "./flex.css"; @import "./form.css";
 
 /* Шрифты и отступы */
-
 * {
     padding: 0;
     margin: 0; 
@@ -10,10 +9,7 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
-
-
 /* Общие стили */
-
 img {
     width: 100%;
     height: auto;
@@ -25,8 +21,9 @@ img {
 }
 
 .info_buton { 
-margin-top: 40em;
+	margin-top: 40em;
 }
+
 .conteiner {
     text-align: center;
 }
@@ -38,22 +35,24 @@ margin-top: 40em;
 footer,h5 { 
     margin: 1em;
 }
+
 .story_img {
     border-radius: 10%;
     max-height: 40em;
-
 }
+
 .story_header {
     margin-bottom: 3em;
     text-align: center;
 }
+
 .stat_img {
     border-radius: 50%;
 }
+
 .blog_img {
     border-radius: 10%;
 }
-
 /* Кнопка перехода к анкете */
 .logo_2 {
     color: black;
@@ -80,15 +79,15 @@ footer,h5 {
     background: white;
     box-shadow: 0 8px 15px rgba(0,0,0,.1);
     transition: .3s;
-  }
+}
+
   .start_button:hover {
     background: #D5B45B;
     box-shadow: 0 15px 20px rgba(211, 229, 46, 0.4);
     color: white;
     transform: translateY(-7px);
     transition: 0.6s;
-  }
-
+}
 /* Меню */
 html {
     height: 100%;
@@ -114,116 +113,86 @@ header a {
     outline: none;  
     transition: .3s ease-in-out;
   }
-  .logo {
+
+.logo {
     color: #D5B45B;
     font-family: 'Playfair Display', serif;
     font-size: 2.5em;
     padding: 20px 0;
-  }
-  nav {
+}
+
+nav {
     display: table;
     margin: 0 auto;
-  }
-  nav ul {
+}
+
+nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
-  }
-  .topmenu:after {
+}
+
+.topmenu:after {
     content: "";
     display: table;
     clear: both;
-  }
-  .topmenu > li {
+}
+
+.topmenu > li {
     width: 25%;
     float: left;
     position: relative;
     font-family: 'Open Sans', sans-serif;
-  }
-  .topmenu > li > a {
+}
+
+.topmenu > li > a {
     text-transform: uppercase;
     font-size: 14px;
       font-weight: bold;
       color: #404040;
     padding: 15px 30px;
-  }
-  .topmenu li a:hover {color: #D5B45B;}
-  .submenu-link:after {
+}
+
+.topmenu li a:hover {
+	color: #D5B45B;
+}
+
+.submenu-link:after {
     content: "\2630";
     font-family: "FontAwesome";
     color: inherit;
     margin-left: 1px;
-  }
-  .submenu {
+}
+
+.submenu {
     background: #273037;
-      position: absolute;
-      left: 0;
-      top: 100%;
-      z-index: 5;
-      width: 160px;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    z-index: 5;
+    width: 160px;
     opacity: 0;
-      transform: scaleY(0);
-      transform-origin :0 0;
+    transform: scaleY(0);
+    transform-origin :0 0;
     transition: .5s ease-in-out;
-  }
-  .submenu a {
+}
+
+.submenu a {
     color: white;
-      text-align: left;
-      padding: 12px 15px;
-      font-size: 13px;
-      border-bottom: 1px solid rgba(255,255,255,.1);
-  }
-  .submenu li:last-child a {border-bottom: none;}
-  .topmenu > li:hover .submenu {
+    text-align: left;
+    padding: 12px 15px;
+    font-size: 13px;
+    border-bottom: 1px solid rgba(255,255,255,.1);
+}
+
+.submenu li:last-child a {
+	border-bottom: none;
+}
+
+.topmenu > li:hover .submenu {
     opacity: 1;
-      transform: scaleY(1);
-  }
-/* .top-menu {
-    position: relative;
-    background: rgba(34,34,34,.2);
-  }
-
-  .menu-main a {
-    text-decoration: none;
-    display: block;
-    line-height: 4em;
-    padding: 0 20px;
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-family: 'Arimo', sans-serif;
-    font-weight: bold;
-    color: white;
-    transition: .3s linear;
-  }
-  .menu-main a:hover {background: rgba(0,0,0,.3);
+    transform: scaleY(1);
 }
-  */
-
-/* .menu-main {
-    margin-top: 1em;
-  } 
-.menu-main ul  {
-    display: block;
-}
-.menu-main a {
-    font-family: 'Ubuntu Condensed', sans-serif;
-    font-size: 17px;
-    text-transform: uppercase;
-    display: inline-block;
-    transition: color 0.3s;
-}
-.menu-main a, .menu-main a:visited {
-    color: black;
-}
-.menu-main a.current, .menu-main a:hover {
-    color: #2EE59D;
-}
-header:hover {
-    background-color: grey;
-    transition: 0.5s;
-} */
-
-
 /* Автор */
 .avtor {
     background-image: linear-gradient(#D5B45B 50%, #D5B45B 50%), linear-gradient(silver 50%, silver 50%); 
@@ -234,15 +203,13 @@ header:hover {
     padding-bottom: 3px; 
     transition: .5s ease-in-out;
 }
+
 .avtor:hover {
     background-size: 100% 2px, 100% 2px;
     color:#D5B45B;
 }
-
 /* Читать дальше  */
-
 .read_later {
-   
     background-position: center bottom; 
     background-repeat: no-repeat; 
     background-size: 0 2px, 100% 2px; 
@@ -250,30 +217,27 @@ header:hover {
     padding-bottom: 3px; 
     transition: .5s ease-in-out;
 }
+
 .read_later:hover {
     background-size: 100% 2px, 100% 2px;
     color: #D5B45B;
 
 }
-
-/* Изображения */
-
 /* Фон */
-
 img {
     /* Прозрачность */
     opacity:0.9;
     cursor: pointer;
 }
+
 img:hover {
     opacity: 1;
 }
-
 /* Фоотер */
-
 .conteiner_footer {
     text-align: left;
 }
+
 .conteiner_footer a {
     color: #404040;
 }
@@ -282,6 +246,7 @@ img:hover {
     color: #D5B45B;
     transform: .6s;
 }
+
 .h_footer {
     border-bottom: 1px solid grey;
     text-align: center;
@@ -292,9 +257,7 @@ footer {
     width:100%;
     margin: auto; 
     height: 100%;
-    
 }
-
 
 footer .social a {
     height: 98px;
@@ -303,23 +266,28 @@ footer .social a {
     background: url(../img/sprites.png);
     background-repeat: no-repeat;
 }
+
 footer a.facebook {
     background-position: 0 0;
 }
+
 footer a.youtube {
     background-position: -200px 0;
 }
+
 footer a.twitter {
     background-position: -500px 0;
 }
+
 footer a.instagram {
     background-position: -300px 0;
 }
+
 footer a.linked {
     background-position: -400px 0;
 }
-/* Модальное окно входа  */
 
+/* Модальное окно входа  */
 .modal {
     position: absolute;
     top: 10%;
@@ -333,6 +301,7 @@ footer a.linked {
     padding: 30px; */
     transition: all 1s;
 }
+
 .modal h3 {
     position: relative;
     z-index: 5;
@@ -342,6 +311,7 @@ footer a.linked {
     font-size: 30px;
     font-weight: normal;
 }
+
 .ui-form h3:before {
     content: "";
     position: absolute;
@@ -353,6 +323,7 @@ footer a.linked {
     border-radius: 50%;
     background: #fee8e4;
 }
+
 .ui-form h3:after {
     content: "";
     position: absolute;
@@ -370,6 +341,7 @@ footer a.linked {
     position: relative;
     margin-bottom: 40px;
 }
+
 .form-row input {
     display: block;
     width: 100%;
@@ -381,6 +353,7 @@ footer a.linked {
     border-bottom: 2px solid #D5B45B;
     transition: all 0.2s ease;
 }
+
 .form-row label {
     position: absolute;
     left: 13px;
@@ -416,10 +389,12 @@ footer a.linked {
     color: white;
     font-size: 20px;
 }
+
 .modal p {
     margin: 0;
     padding-top: 10px;
 }
+
 .modal:target {
     opacity: 1;
 }
@@ -429,6 +404,7 @@ footer a.linked {
     visibility: hidden;
     opacity: 0;
 }
+
 .close-modal {
     position: absolute;
     top: 10px;
@@ -436,164 +412,136 @@ footer a.linked {
     color: red;
     font-size: x-large;
 }
-
-
 /* Блок статистики */
+.canvas {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	max-width: 800px;
+}
 
-  
-  .canvas {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 800px;
-  }
+.title {  
+	font-family: "Verdana", sans-serif;
+	font-size: 18px;
+	line-height: 21px;
+	color: black; 
+}
 
-  /* .legend {
-    /* max-width: 250px;
-    margin-left: 30px;
-  }  */
-  
-  .title {  
-    font-family: "Verdana", sans-serif;
-    font-size: 18px;
-    line-height: 21px;
-    color: black; 
-  }
-  
-  /* .caption-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  } */
-  
-  .caption-item {
-    position: relative;
-  
-    margin: 20px 0;
-    padding-left: 30px;
-    
-    /* font-family: "Verdana", sans-serif; */
-    font-size: 16px;
-    line-height: 18px;
-    color: #273037;  
-    cursor: pointer; 
-    text-align: left;
-  }
-  
-  .caption-item:hover {
-    opacity: 0.8;
-  }
-  
-  .caption-item::before {
-    content: "";
-    
-    position: absolute;
-    top: 0;
-    left: 0;
-    
-    width: 20px;
-    height: 20px;
-    
-    border-radius: 8px;
-  }
-  
-  .caption-item:nth-child(1)::before {
-    background-color: #86cfa3;
-  }
-  
-  .caption-item:nth-child(2)::before {
-    background-color: #a2c6e0;
-  }
-  
-  .caption-item:nth-child(3)::before {
-    background-color: #ffc7ec;
-  }
-  
-  .caption-item:nth-child(4)::before {
-    background-color: #f8faa0;
-  }
-  
-  .caption-item:nth-child(5)::before {
-    background-color: #adffd8;
-  }
-  
-  .caption-item:nth-child(6)::before {
-    background-color: #f2c48f;
-  }
-  
-  .caption-item:nth-child(7)::before {
-    background-color: #e3bfe2;
-  }
-  
-  .chart {
-    min-width: 500px;
-    width: auto;
-    height: auto;
-  }
-  
-  .unit {
-    fill: none;
-    stroke-width: 10;
-    cursor: pointer;
-    
-    animation-name: render;
-    animation-duration: 1.5s;
-    transition-property: all; 
-    transition-duration: 1.5s;
-  }
-  
-  .unit:hover,
-  .hovered {
-    opacity: 0.8;
-    stroke-width: 12;
-  }
-  
-  .unit:nth-child(1) {
-    stroke: #86cfa3;
-    stroke-dasharray: 8 100;
-  }
-  
-  .unit:nth-child(2) {
-    stroke: #a2c6e0;
-    stroke-dasharray: 11 100;
-    stroke-dashoffset: -8;
-  }
-  
-  .unit:nth-child(3) {
-    stroke: #ffc7ec;
-    stroke-dasharray: 11 100;
-    stroke-dashoffset: -19;
-  }
-  
-  .unit:nth-child(4) {
-    stroke: #f8faa0;
-    stroke-dasharray: 14 100;
-    stroke-dashoffset: -30;
-  }
-  
-  .unit:nth-child(5) {
-    stroke: #adffd8;
-    stroke-dasharray: 11 100;
-    stroke-dashoffset: -44;
-  }
-  
-  .unit:nth-child(6) {
-    stroke: #f2c48f;
-    stroke-dasharray: 5 100;
-    stroke-dashoffset: -55;
-  }
-  
-  .unit:nth-child(7) {
-    stroke: #e3bfe2;
-    stroke-dasharray: 40 100;
-    stroke-dashoffset: -60;
-  }
+.caption-item {
+	position: relative;
+	margin: 20px 0;
+	padding-left: 30px;
+	font-size: 16px;
+	line-height: 18px;
+	color: #273037;  
+	cursor: pointer; 
+	text-align: left;
+}
 
-  /* Адаптивность */
+.caption-item:hover {
+	opacity: 0.8;
+}
 
+.caption-item::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20px;
+	height: 20px;
+	border-radius: 8px;
+}
 
+.caption-item:nth-child(1)::before {
+	background-color: #86cfa3;
+}
 
+.caption-item:nth-child(2)::before {
+	background-color: #a2c6e0;
+}
 
+.caption-item:nth-child(3)::before {
+	background-color: #ffc7ec;
+}
+
+.caption-item:nth-child(4)::before {
+	background-color: #f8faa0;
+}
+
+.caption-item:nth-child(5)::before {
+	background-color: #adffd8;
+}
+
+.caption-item:nth-child(6)::before {
+	background-color: #f2c48f;
+}
+
+.caption-item:nth-child(7)::before {
+	background-color: #e3bfe2;
+}
+
+.chart {
+	min-width: 500px;
+	width: auto;
+	height: auto;
+}
+
+.unit {
+	fill: none;
+	stroke-width: 10;
+	cursor: pointer;
+	animation-name: render;
+	animation-duration: 1.5s;
+	transition-property: all; 
+	transition-duration: 1.5s;
+}
+
+.unit:hover,.hovered {
+	opacity: 0.8;
+	stroke-width: 12;
+}
+
+.unit:nth-child(1) {
+	stroke: #86cfa3;
+	stroke-dasharray: 8 100;
+}
+
+.unit:nth-child(2) {
+	stroke: #a2c6e0;
+	stroke-dasharray: 11 100;
+	stroke-dashoffset: -8;
+}
+
+.unit:nth-child(3) {
+	stroke: #ffc7ec;
+	stroke-dasharray: 11 100;
+	stroke-dashoffset: -19;
+}
+
+.unit:nth-child(4) {
+	stroke: #f8faa0;
+	stroke-dasharray: 14 100;
+	stroke-dashoffset: -30;
+}
+
+.unit:nth-child(5) {
+	stroke: #adffd8;
+	stroke-dasharray: 11 100;
+	stroke-dashoffset: -44;
+}
+
+.unit:nth-child(6) {
+	stroke: #f2c48f;
+	stroke-dasharray: 5 100;
+	stroke-dashoffset: -55;
+}
+
+.unit:nth-child(7) {
+	stroke: #e3bfe2;
+	stroke-dasharray: 40 100;
+	stroke-dashoffset: -60;
+}
+/* Адаптивность */
 @media screen and (max-width: 770px) { /*xm*/
     aside {
         display: none;
@@ -619,6 +567,7 @@ footer a.linked {
         gap: 1em;
     }
 }
+
 @media screen and (max-width: 480px ) {/*xs*/
     aside {
         display: none;
@@ -647,5 +596,4 @@ footer a.linked {
         display: block;
         text-align: center;
     }
-   
 }
